--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sect2">
 <h3 id="_1_manipulando_pixels_em_uma_imagem">1. Manipulando Pixels em uma Imagem</h3>
 <div class="paragraph">
-<p>Primeiramente, foi proposto compilar e executar o programa <a href="#pixels">pixels.cpp</a>, que consiste em abrir uma imagem (bolhas.png) e cobrir uma região com uma coloração qualquer.</p>
+<p>Primeiramente, foi proposto compilar e executar o programa <a href="#pixels">pixels.cpp</a>, que consiste em abrir uma imagem (<a href="#pixels_preenchidos">bolhas.png</a>) e cobrir uma região com uma coloração qualquer.</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -503,7 +503,7 @@ int main(int, char**){
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="PDI/2/cor_pixels.png" alt="Saída" width="250" height="250">
+<img src="PDI/2/cor_pixels.png" alt="pixels_preenchidos" width="250" height="250">
 </div>
 </div>
 </div>
@@ -512,7 +512,7 @@ int main(int, char**){
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-06-26 18:08:10 -0300
+Last updated 2023-06-26 18:13:52 -0300
 </div>
 </div>
 </body>
