--- a/index.html
+++ b/index.html
@@ -735,9 +735,13 @@ int main(int, char**){
 <p><em>q1</em>: Começa da primeira linha e primeira coluna da imagem (<em>0</em>, <em>0</em>) e se extende até a metade da figura (<em>nlinhas/2</em>, <em>ncolunas/2</em>);</p>
 </li>
 <li>
-<p><em>q2</em>: Começa na primeira linha e na metade das colunas da imagem (<em>0</em>, <em>ncolunas/2</em>), e vai até a metade das linhas e última coluna da imagem (<em>nlinhas/2</em>, <em>ncolunas/2</em>);
-*<em>q3</em>: Inicia na metade das linhas e primeira coluna da figura (<em>nlinhas/2</em>, <em>0</em>), e se extende até a metade da figura (<em>nlinhas/2</em>, <em>ncolunas/2</em>);
-*<em>q4</em>: Inicia na metade das linhas e metade das colunas da figura (<em>nlinhas/2</em>, <em>ncolunas/2</em>), e se extende até a última linha e última coluna da figura (<em>nlinhas/2</em>, <em>ncolunas/2</em>).</p>
+<p><em>q2</em>: Começa na primeira linha e na metade das colunas da imagem (<em>0</em>, <em>ncolunas/2</em>), e vai até a metade das linhas e última coluna da imagem (<em>nlinhas/2</em>, <em>ncolunas/2</em>);</p>
+</li>
+<li>
+<p><em>q3</em>: Inicia na metade das linhas e primeira coluna da figura (<em>nlinhas/2</em>, <em>0</em>), e se extende até a metade da figura (<em>nlinhas/2</em>, <em>ncolunas/2</em>);</p>
+</li>
+<li>
+<p><em>q4</em>: Inicia na metade das linhas e metade das colunas da figura (<em>nlinhas/2</em>, <em>ncolunas/2</em>), e se extende até a última linha e última coluna da figura (<em>nlinhas/2</em>, <em>ncolunas/2</em>).</p>
 </li>
 </ul>
 </div>
@@ -796,7 +800,7 @@ int main(int, char**){
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-06-26 19:52:12 -0300
+Last updated 2023-06-26 20:05:15 -0300
 </div>
 </div>
 </body>
