teste_toc_book2

--- a/index.html
+++ b/index.html
@@ -861,6 +861,9 @@ int main(int argc, char** argv) {
 }</code></pre>
 </div>
 </div>
+<div class="paragraph">
+<p>Inicialmente&#8230;&#8203;</p>
+</div>
 <div id="filestorage_inicio" class="listingblock">
 <div class="title">Início do Código Filestorage</div>
 <div class="content">
@@ -889,6 +892,9 @@ int main(int argc, char** argv) {
   }
 }</code></pre>
 </div>
+</div>
+<div class="paragraph">
+<p>Após isso&#8230;&#8203;</p>
 </div>
 <div id="filestorage_fim" class="listingblock">
 <div class="title">Final do Código Filestorage</div>
@@ -930,7 +936,7 @@ int main(int argc, char** argv) {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-06-27 10:04:09 -0300
+Last updated 2023-06-27 10:13:34 -0300
 </div>
 </div>
 </body>
