--- a/index.html
+++ b/index.html
@@ -438,11 +438,24 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 @media amzn-kf8{#header,#content,#footnotes,#footer{padding:0}}
 </style>
 </head>
-<body class="article">
+<body class="book toc2 toc-left">
 <div id="header">
 <h1>UFRN - Processamento Digital de Imagens (DCA0445)</h1>
 <div class="details">
 <span id="author" class="author">Rafael Augusto de Oliveira Guedes</span><br>
+</div>
+<div id="toc" class="toc2">
+<div id="toctitle">Sumário</div>
+<ul class="sectlevel1">
+<li><a href="#_1_manipulando_pixels_em_uma_imagem">1. Manipulando Pixels em uma Imagem</a>
+<ul class="sectlevel2">
+<li><a href="#_1_1_preenchimento_de_pixels">1.1. Preenchimento de Pixels</a></li>
+<li><a href="#_1_2_invertendo_regiões">1.2. Invertendo Regiões</a></li>
+<li><a href="#_1_3_trocando_regiões">1.3. Trocando Regiões</a></li>
+</ul>
+</li>
+<li><a href="#_2_filestorage">2. Filestorage</a></li>
+</ul>
 </div>
 </div>
 <div id="content">
@@ -943,7 +956,7 @@ int main(int argc, char** argv) {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-06-27 10:38:07 -0300
+Last updated 2023-06-28 11:19:01 -0300
 </div>
 </div>
 </body>
